--- a/index.html
+++ b/index.html
@@ -13,25 +13,9 @@
 </head>
 
 <body>
+    
 
-
-    <div class="playBtn w-[100%] h-[100vh] bg-gradient-to-r from-indigo-500 via-purple-500 to-pink-500 ... z-12 absolute top-0">
-        <div class="SongPlayer w-full h-[10vh] absolute bottom-0 bg-transparent flex z-30"></div>
-        <div
-            class="btnsdiv flex z-40 w-full h-16 absolute bottom-0 bg-transparent justify-center items-center gap-5 text-gray-900">
-            <button
-                class="btns btn1 w-[3vw] h-[3vw] p-[1vw] shadow-lg shadow-gray-700 flex justify-center items-center active:w-[3.5vw] active:h-[3.5vw] rounded-[0.8vw]"><i
-                    class="backward fa-solid fa-backward bg-transparent text-[1.8vw] active:text-[2vw]"></i></button>
-            <button
-                class="btns btn2 w-[3vw] h-[3vw] p-[1vw] shadow-lg shadow-gray-700 flex justify-center items-center active:w-[3.5vw] active:h-[3.5vw] rounded-[0.8vw]"><i
-                    class="playy fa-solid fa-play bg-transparent text-[1.8vw] active:text-[2vw]"></i></button>
-            <button
-                class="btns btn3 w-[3vw] h-[3vw] p-[1vw] shadow-lg shadow-gray-700 flex justify-center items-center active:w-[3.5vw] active:h-[3.5vw] rounded-[0.8vw]"><i
-                    class="forward fa-solid fa-forward bg-transparent text-[1.8vw] active:text-[2vw]"></i></button>
-        </div>
-    </div>
-
-    <div class="sections w-full h-[88vh] relative top-0 grid grid-cols-[15vw_60vw_25vw] rounded-b-[1.8vw] bg-gray-700">
+    <div class="sections w-full h-[88vh] relative top-0 grid grid-cols-[15vw_60vw_25vw] rounded-b-[1.8vw] bg-gray-700 z-30">
         <div class="ExploreContainer rounded-bl-[1.8vw]">
             <div class="relative AppName border-b border-gray-500 text-white w-full h-[10vh] flex items-center ">
                 <img class="logo w-[50%]" src="./IMG/Music-Waves-Logo-Graphics-21387562-1-removebg-preview.png"
@@ -68,7 +52,7 @@
         </div>
 
 
-        <div class="absolute cardsec grid grid-rows-[10vh_16vh_35vh_20vh]  relative p-[2vh] border-l border-gray-500 ">
+        <div class=" cardsec grid grid-rows-[10vh_16vh_35vh_20vh]  relative p-[2vh] border-l border-gray-500 ">
             <div class=" search flex items-center">
                 <i class="fa-solid angles fa-angle-left text-gray-400 hover:text-gray-300 text-[1.4vw]"></i>
                 <i class="fa-solid angles fa-angle-right text-gray-400 hover:text-gray-300 ml-[0.6vw] text-[1.4vw]"></i>
@@ -198,7 +182,7 @@
                 </div>
 
                 <div class="artists relative grid grid-rows-[5vh_29vh]">
-                    <div class="flex relative justify-end bg-transparent items-center gap-1">
+                    <div class="artiststext flex relative justify-end bg-transparent items-center gap-1">
                         <h4 class="text-[1vw] relative text-gray-300 mr-[0.5vw]">Artists</h4>
                         <i class="fa-solid fa-angle-left text-gray-400 hover:text-gray-300 text-[1.1vw]"></i>
                         <i class="fa-solid fa-angle-right text-gray-400 hover:text-gray-300 text-[1.1vw]"></i>
@@ -274,7 +258,21 @@
             </div>
         </div>
     </div>
-
+    <div class="playBtn w-[100%] h-[100vh] bg-gradient-to-r from-indigo-500 via-purple-500 to-pink-500 ... z-12 absolute top-0">
+        <div class="SongPlayer w-full h-[10vh] absolute bottom-0 bg-transparent flex z-30"></div>
+        <div
+            class="btnsdiv flex z-40 w-full h-16 absolute bottom-0 bg-transparent justify-center items-center gap-5 text-gray-900">
+            <button
+                class="btns btn1 w-[3vw] h-[3vw] p-[1vw] shadow-lg shadow-gray-700 flex justify-center items-center active:w-[3.5vw] active:h-[3.5vw] rounded-[0.8vw]"><i
+                    class="backward fa-solid fa-backward bg-transparent text-[1.8vw] active:text-[2vw]"></i></button>
+            <button
+                class="btns btn2 w-[3vw] h-[3vw] p-[1vw] shadow-lg shadow-gray-700 flex justify-center items-center active:w-[3.5vw] active:h-[3.5vw] rounded-[0.8vw]"><i
+                    class="playy fa-solid fa-play bg-transparent text-[1.8vw] active:text-[2vw]"></i></button>
+            <button
+                class="btns btn3 w-[3vw] h-[3vw] p-[1vw] shadow-lg shadow-gray-700 flex justify-center items-center active:w-[3.5vw] active:h-[3.5vw] rounded-[0.8vw]"><i
+                    class="forward fa-solid fa-forward bg-transparent text-[1.8vw] active:text-[2vw]"></i></button>
+        </div>
+    </div>
     <script src="./script.js"></script>
 </body>
 
